// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyGroups renders empty state correctly 1`] = `
<View
  className="flex-1 items-center justify-center gap-4 px-8"
>
  <Text
    className="text-5xl"
  >
    🤝
  </Text>
  <Text
    className="text-xl font-bold text-slate-800 text-center"
  >
    No groups yet
  </Text>
  <Text
    className="text-base text-slate-500 text-center leading-6"
  >
    Create a group to start splitting expenses with friends, roommates, or travel buddies.
  </Text>
</View>
`;

exports[`GroupAvatar renders emoji avatar 1`] = `
<View
  accessibilityLabel="Group avatar: ✈️"
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F1F5F9",
      "borderRadius": 24,
      "height": 48,
      "justifyContent": "center",
      "width": 48,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 22,
      }
    }
  >
    ✈️
  </Text>
</View>
`;

exports[`GroupAvatar renders initials fallback 1`] = `
<View
  accessibilityLabel="Group avatar for Flat Expenses"
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#10B981",
      "borderRadius": 24,
      "height": 48,
      "justifyContent": "center",
      "width": 48,
    }
  }
>
  <Text
    style={
      {
        "color": "#fff",
        "fontSize": 16,
        "fontWeight": "700",
      }
    }
  >
    FE
  </Text>
</View>
`;

exports[`GroupListItem renders a group row with emoji avatar 1`] = `
<View
  collapsable={false}
  entering={
    FadeInDown {
      "build": [Function],
      "delayV": 0,
      "durationV": undefined,
      "randomizeDelay": false,
      "reduceMotionV": "system",
      "type": [Function],
    }
  }
  exiting={[Function]}
  jestAnimatedProps={
    {
      "value": {},
    }
  }
  jestAnimatedStyle={
    {
      "value": {},
    }
  }
  nativeID="0"
>
  <View
    accessibilityLabel="Open group Goa Trip"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex-row items-center px-5 py-4 bg-white border-b border-slate-100 active:bg-slate-50"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      accessibilityLabel="Group avatar: ✈️"
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#F1F5F9",
          "borderRadius": 24,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 22,
          }
        }
      >
        ✈️
      </Text>
    </View>
    <View
      className="flex-1 ml-3"
    >
      <Text
        className="text-base font-semibold text-slate-900"
        numberOfLines={1}
      >
        Goa Trip
      </Text>
      <Text
        className="text-sm text-slate-500 mt-0.5"
      >
        3
         
        members
         · No expenses yet
      </Text>
    </View>
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={18}
      bbWidth={18}
      fill="none"
      focusable={false}
      height={18}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#94A3B8"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 18,
            "width": 18,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={18}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4287931320,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="m9 18 6-6-6-6"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4287931320,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`GroupListItem renders a group row with initials avatar 1`] = `
<View
  collapsable={false}
  entering={
    FadeInDown {
      "build": [Function],
      "delayV": 60,
      "durationV": undefined,
      "randomizeDelay": false,
      "reduceMotionV": "system",
      "type": [Function],
    }
  }
  exiting={[Function]}
  jestAnimatedProps={
    {
      "value": {},
    }
  }
  jestAnimatedStyle={
    {
      "value": {},
    }
  }
  nativeID="1"
>
  <View
    accessibilityLabel="Open group Goa Trip"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex-row items-center px-5 py-4 bg-white border-b border-slate-100 active:bg-slate-50"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      accessibilityLabel="Group avatar for Goa Trip"
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EF4444",
          "borderRadius": 24,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        }
      }
    >
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "700",
          }
        }
      >
        GT
      </Text>
    </View>
    <View
      className="flex-1 ml-3"
    >
      <Text
        className="text-base font-semibold text-slate-900"
        numberOfLines={1}
      >
        Goa Trip
      </Text>
      <Text
        className="text-sm text-slate-500 mt-0.5"
      >
        3
         
        members
         · No expenses yet
      </Text>
    </View>
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={18}
      bbWidth={18}
      fill="none"
      focusable={false}
      height={18}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#94A3B8"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 18,
            "width": 18,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={18}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4287931320,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="m9 18 6-6-6-6"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4287931320,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`MemberAvatarRow renders overflow badge when more than 5 members 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityLabel="Member 0"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#6C47FF",
        "borderColor": "#fff",
        "borderRadius": 16,
        "borderWidth": 2,
        "height": 32,
        "justifyContent": "center",
        "marginLeft": 0,
        "width": 32,
        "zIndex": 5,
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 11,
          "fontWeight": "700",
        }
      }
    >
      M0
    </Text>
  </View>
  <View
    accessibilityLabel="Member 1"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FF6B35",
        "borderColor": "#fff",
        "borderRadius": 16,
        "borderWidth": 2,
        "height": 32,
        "justifyContent": "center",
        "marginLeft": -10,
        "width": 32,
        "zIndex": 4,
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 11,
          "fontWeight": "700",
        }
      }
    >
      M1
    </Text>
  </View>
  <View
    accessibilityLabel="Member 2"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#10B981",
        "borderColor": "#fff",
        "borderRadius": 16,
        "borderWidth": 2,
        "height": 32,
        "justifyContent": "center",
        "marginLeft": -10,
        "width": 32,
        "zIndex": 3,
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 11,
          "fontWeight": "700",
        }
      }
    >
      M2
    </Text>
  </View>
  <View
    accessibilityLabel="Member 3"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F59E0B",
        "borderColor": "#fff",
        "borderRadius": 16,
        "borderWidth": 2,
        "height": 32,
        "justifyContent": "center",
        "marginLeft": -10,
        "width": 32,
        "zIndex": 2,
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 11,
          "fontWeight": "700",
        }
      }
    >
      M3
    </Text>
  </View>
  <View
    accessibilityLabel="Member 4"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#3B82F6",
        "borderColor": "#fff",
        "borderRadius": 16,
        "borderWidth": 2,
        "height": 32,
        "justifyContent": "center",
        "marginLeft": -10,
        "width": 32,
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 11,
          "fontWeight": "700",
        }
      }
    >
      M4
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#E2E8F0",
        "borderColor": "#fff",
        "borderRadius": 16,
        "borderWidth": 2,
        "height": 32,
        "justifyContent": "center",
        "marginLeft": -10,
        "width": 32,
      }
    }
  >
    <Text
      style={
        {
          "color": "#64748B",
          "fontSize": 10,
          "fontWeight": "700",
        }
      }
    >
      +
      2
    </Text>
  </View>
</View>
`;

exports[`MemberAvatarRow renders up to 5 member avatars 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityLabel="Sahil"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#6C47FF",
        "borderColor": "#fff",
        "borderRadius": 16,
        "borderWidth": 2,
        "height": 32,
        "justifyContent": "center",
        "marginLeft": 0,
        "width": 32,
        "zIndex": 5,
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 11,
          "fontWeight": "700",
        }
      }
    >
      S
    </Text>
  </View>
  <View
    accessibilityLabel="Priya"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FF6B35",
        "borderColor": "#fff",
        "borderRadius": 16,
        "borderWidth": 2,
        "height": 32,
        "justifyContent": "center",
        "marginLeft": -10,
        "width": 32,
        "zIndex": 4,
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 11,
          "fontWeight": "700",
        }
      }
    >
      P
    </Text>
  </View>
</View>
`;
